<resources>
    <string name="app_name">cashapp</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="clear">C</string>

    <string name="quantity">Quantity</string>

    <string name="pante">Pante</string>
    <string name="panteQ">10</string>
    <string name="panteUP">20.44</string>
    <string name="shoes">Shoes</string>
    <string name="shoesUP">10.44</string>
    <string name="shoesQ">100</string>
    <string name="hats">Hats</string>
    <string name="hatsQ">30</string>
    <string name="hatsUP">5.9</string>
</resources>