<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/productTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Product Type"
        android:textColor="@color/gray"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total"
        android:textColor="@color/gray"
        android:textSize="20dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/productTypeText" />

    <Button
        android:id="@+id/buy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Buy"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/teal"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:paddingLeft="5dp"
                android:text="@string/one"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:paddingLeft="5dp"
                android:text="@string/two"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:paddingLeft="5dp"
                android:text="@string/three"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:paddingLeft="5dp"
                android:text="@string/four"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:paddingLeft="5dp"
                android:text="@string/five"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:paddingLeft="5dp"
                android:text="@string/six"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20sp" />

        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:paddingLeft="5dp"
                android:text="@string/seven"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:paddingLeft="5dp"
                android:text="@string/eight"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:paddingLeft="5dp"
                android:text="@string/nine"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20sp" />

        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:paddingLeft="5dp"
                android:text="@string/clear"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:paddingLeft="5dp"
                android:text="@string/zero"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/quantity"
        android:textColor="@color/gray"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            >

            <TextView
                android:id="@+id/pante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pante"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/panteQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/panteQ"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="@id/guideline7"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/panteUP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pante"
                android:text="@string/panteUP"
                android:textColor="@color/gray"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pante" />

            <TextView
                android:id="@+id/shoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoes"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/panteUP" />
            <TextView
                android:id="@+id/shoesQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoesQ"
                android:textSize="25sp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="@id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/panteUP" />

            <TextView
                android:id="@+id/shoesUP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shoes"
                android:text="@string/shoesUP"
                android:textColor="@color/gray"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoes" />

            <TextView
                android:id="@+id/hats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hats"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoesUP" />
            <TextView
                android:id="@+id/hatsQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hatsQ"
                android:textSize="25sp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="@id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/shoesUP" />

            <TextView
                android:id="@+id/hatsUP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shoes"
                android:text="@string/hatsUP"
                android:textColor="@color/gray"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hats" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.76" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />



</androidx.constraintlayout.widget.ConstraintLayout>